Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>

	* MP_TcpTransp.h: Added fork mode to MPtcp links

Tue May 20 17:38:53 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in (target MP.h): explicitely user perl to call makeheaders

Sat May  3 19:55:06 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_BigNum.c Changed MP_DEFAULT_BIG* to MP_DEFAULT_AP to reflect
	  names choosen in configure

	* MP_Memory.c (mrealloc): inserted return statements

	* MP_TcpTransp.c: added #include <string.h> for declaration of strcat
	
	* MP_TcpTransp.c: added stdlib.h which conatins declaration of
	  atoi, strtol

	* MP_TcpTransp.c: added #include <unistd.h> which contains
	  declaration of gethostname, vfork, execvp, close (at least on
	  the HP's)

	* MP_Util.c, MP_Env.s: added */ at the end of intro header

	* MP_Get.c: (MP_GetApIntPacket, MP_GetApRealPacket) Fixed logging
	  so that *num_annots instead of num_annot is printed

	* Makefile.in (CPPFLAGS): Put -I. before other CPPFLAGS

Fri May  2 14:18:02 1997  Simon Gray  (sgray@Pooh)

	* MP_Env.c, MPFileTransp.c, MP_Link.c, MP_PvmTransp.c,
	  MP_TbTransp.c, MP_TcpTransp.c, MP_Env.h - Changed transp_type to
	  transp_dev which is more accurate and descriptive and doesn't
	  clash with the use of "type" in MP types (e.g., MP_Sint32Type).
	  Also changed the defines in MP_Env.h from MP_<dev>TranspType to
	  MP_<dev>TranspDev.

Fri Apr 18 12:21:41 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de
 (Olaf Bachmann)>

	 * MP_TcpTransp.c (open_tcp_launch_mode): Determine the length of
	   appstr using rsh_argv[3] instead of rsh_argv[2]


Fri Apr  11 17:06:35 1997  Simon Gray  (sgray@Pooh)

	* MP_Link.c: Changed order of cval and dtag for MP_PeekHeader() 
	  to make it consistent with all the Put and Get routines.

Tue Apr  8 12:28:36 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de
 (Olaf Bachmann)>
