@@ -1,3 +1,15 @@
+Wed Jun 25 09:04:25 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
+
+	* MP_Env.c: extern "C" wrapper for includes sys/stat.h 
+
+	* MP_Put.c: changed bool identifier to mbool to avaoid clashes
+	  when compiling with g++
+
+Fri Jun 20 11:24:18 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
+
+	* MP_Link.c: MP_SetLinkOptions: case MP_LINK_LOG_MASK_OPT,
+	  assigned oldval
+
 Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>
 
 	* MP_TcpTransp.h: Added fork mode to MPtcp links
